[metadata]
name = django-circles
version = 0.1
description = A Django app to create circles of collaborators
long_description = A Django app to create circles of collaborators
url = https://github.com/yelluw/django-circles
author = Pablo Rivera
author_email = pryelluw@gmail.com
license = MIT 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: